Lição 3 - aprofundando no html

--- a/html_css3_I/bio.html
+++ b/html_css3_I/bio.html
@@ -54,13 +54,15 @@
 	</main>
 	
 	<img src="projeto/eu.jpg" alt="foto de joão da silva">
-	<nav>
+	<aside>
 		<h1>João da Silva</h1>
-		<ul>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Portfólio</a></li>
-		</ul>
-	</nav>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Portfólio</a></li>
+			</ul>
+		</nav>
+	</aside>
 
 	<footer>
 		&copy; João da silva 2017
